update-manager (1:0.124.10) UNRELEASEDkarmic; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - add update-manager so that it does not 
  * typo fixes (thanks to Brian Murray, LP: #418127)
  * merge the changes of seb128 into bzr
  * po/POTFILES.in:
    - fix ui file detection (thanks to Gabor Kelemen) LP: #420209
  * DistUpgrade/DistUpgrade.ui:
    - fix duplicated id (LP: #422665)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Sep 2009 06:40:43 +0200

update-manager (1:0.124.9ubuntu1) karmic; urgency=low

  * Clean build directory

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 31 Aug 2009 22:19:51 +0200

update-manager (1:0.124.9) karmic; urgency=low

  * data/glade/UpdateManager.ui:
    - don't use some duplicated ids to fix update-manager not starting
      due to the new gtk version

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 31 Aug 2009 22:02:20 +0200

update-manager (1:0.124.8) karmic; urgency=low

  * make the release-upgrader auto selection for the frontend
    more robust when no DISPLAY is avaiable
  * Janitor/computerjanitor/package_cruft.py:
    - use unicode string here (thanks to liw)
  * data/glade/UpdateManager.ui:
    - fix duplicated symbol (LP: #417301)
  * UpdateManager/UpdateManager.py:
    - show the on-battery warning on first map only (LP: #416067)
  * DistUpgrade/DistUpgradeController.py:
    - do not how a error when the upgrade is canceled by the user
      during download

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Aug 2009 17:48:45 +0200

update-manager (1:0.124.7) karmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - recalulcate the heading label size dynamically
      to work around bugzilla #101968 (thanks to
      Juergen Kazmirzak for the patch)
  * UpdateManager/backend/__init__.py:
    - fix incomplete check for aptdaemon
  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - update for latest aptdaemon
  * DistUpgrade/DistUpgradeController.py: