@@ -8,8 +8,9 @@ update-manager (1:0.124.10) UNRELEASEDkarmic; urgency=low
     - fix ui file detection (thanks to Gabor Kelemen) LP: #420209
   * DistUpgrade/DistUpgrade.ui:
     - fix duplicated id (LP: #422665)
+  * fix crash when lsmod is not installed
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Sep 2009 06:40:43 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Sep 2009 15:04:53 +0200
 
 update-manager (1:0.124.9ubuntu1) karmic; urgency=low
 
